--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   db:
     image: postgres:14.13
     environment:
@@ -16,6 +17,8 @@ services:
         - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-volumes:
-    postgres_data:
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      retries: 5
 
