# feat: definir variaveis de ambiente banco.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://db:5434/agendamentos
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${BD_URL}
+spring.datasource.username=${BD_USERNAME}
+spring.datasource.password=${BD_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
