--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,14 @@
+version: "3.8"
+
 services:
   api:
     build: .
     image: agenda
     ports:
       - "8080:8080"
-    depends_on:
-      db:
-        condition: service_healthy
-  db:
-    image: postgres:14.13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: agendamentos
-    ports:
-        - "5434:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      retries: 5
-
+      BD_URL: ${BD_URL}
+      BD_USERNAME: ${BD_USERNAME}
+      BD_PASSWORD: ${BD_PASSWORD}
+      MANAGEMENT_METRICS_ENABLE_PROCESS_CPU: "false"
+    depends_on: []
