--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.url=${BD_URL}
 spring.datasource.username=${BD_USERNAME}
 spring.datasource.password=${BD_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+management.metrics.enable.process=false
+management.metrics.enable.process.cpu=false
+management.metrics.enable.jvm=false
+management.endpoints.enabled-by-default=false
